--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "mongodb": "^5.3.0"
+    "mongodb": "^5.3.0",
+    "three": "^0.154.0",
+    "three-fbxloader-offical": "^1.0.0"
   }
 }
