--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@react-spring/parallax": "^9.7.3",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,8 +15,12 @@
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.7.27",
+    "sweetalert2-react-content": "^5.0.7",
     "three": "^0.154.0",
     "three-fbxloader-offical": "^1.0.0",
     "uuid": "^9.0.0",
