--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "sweetalert2": "^11.7.27",
     "sweetalert2-react-content": "^5.0.7",
     "three": "^0.154.0",
